# N_body_simulation

./: CMakeLists.txt  README.md
include/: Body.h  Simulation.h  Vector.h
include/glad/: glad.h
shaders/: fragment_shader.glsl
src/: Body.cpp  Simulation.cpp  Vector.cpp  glad.c  main.cpp
